--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,19 @@
 
 // Variables
 @import "variables";
+//@import "node_modules/bootswatch/dist/litera/variables";
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "components/bootstrap-grid-extra-large";
+
+//@import "node_modules/bootswatch/dist/litera/bootswatch";
+@import "node_modules/font-awesome/scss/font-awesome";
+
+@import "navs";
+
+@import "components/dx.common";
+@import "components/dx.light";
+@import "styles";
+@import "font-sizes";
+@import "buttons";
